fix animation bug on mobile devices

--- a/style.css
+++ b/style.css
@@ -201,6 +201,7 @@ img{
         display: flex;
         align-items: center;
         position: relative;
+        overflow: hidden;
     }
     .secondary > span{
         width: 80%;
